Web fonts should work now in IE8. Working on missing border issue.

--- a/app/assets/stylesheets/experiment-america.css
+++ b/app/assets/stylesheets/experiment-america.css
@@ -186,7 +186,8 @@ img {
 
 @font-face {
   font-family: 'GoodDog';
-  src: url('/assets/gooddog-webfont.eot?#iefix') format('eot'),
+  src: url('assets/gooddog-webfont.eot');
+  src: url('/assets/gooddog-webfont.eot?#iefix') format('embedded-opentype'),
        url('/assets/gooddog-webfont.woff') format('woff'),
        url('/assets/gooddog-webfont.ttf') format('truetype'),
        url('/assets/gooddog-webfont.svg#GoodDog') format('svg');
